// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FullScreenMessage renders a message as expected with an image 1`] = `
<MessageWrapper
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      Object {},
      Object {},
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Array [
          Object {
            "flex": 1,
            "padding": 16,
          },
          Object {},
          Object {},
        ],
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "marginBottom": 8,
              "marginLeft": "auto",
              "marginRight": 8,
            },
            undefined,
          ]
        }
        testID="aws-amplify__in-app-messaging--close-button"
      >
        <Image
          source={
            Object {
              "testUri": "../../../packages/aws-amplify-react-native/src/icons/close.png",
            }
          }
          style={
            Object {
              "height": 20,
              "resizeMode": "contain",
              "tintColor": undefined,
              "width": 20,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "alignItems": "center",
            "marginVertical": 12,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "asset.png",
            }
          }
          style={
            Array [
              Object {
                "height": 100,
                "width": 100,
              },
              undefined,
            ]
          }
          testID="aws-amplify__in-app-messaging--image"
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "marginHorizontal": 4,
            "marginVertical": 12,
            "paddingLeft": 8,
          }
        }
      />
    </View>
  </View>
</MessageWrapper>
`;

exports[`FullScreenMessage renders a message as expected without an image 1`] = `
<MessageWrapper
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
        "flex": 1,
      },
      Object {},
      Object {},
      Object {},
    ]
  }
>
  <View
    style={
      Array [
        Array [
          Object {
            "flex": 1,
            "padding": 16,
          },
          Object {},
          Object {},
        ],
        undefined,
      ]
    }
  >
    <View
      style={
        Object {
          "flex": 1,
        }
      }
    >
      <View
        accessible={true}
        collapsable={false}
        focusable={true}
        hitSlop={
          Object {
            "bottom": 10,
            "left": 10,
            "right": 10,
            "top": 10,
          }
        }
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          Array [
            Object {
              "alignSelf": "flex-start",
              "marginBottom": 8,
              "marginLeft": "auto",
              "marginRight": 8,
            },
            undefined,
          ]
        }
        testID="aws-amplify__in-app-messaging--close-button"
      >
        <Image
          source={
            Object {
              "testUri": "../../../packages/aws-amplify-react-native/src/icons/close.png",
            }
          }
          style={
            Object {
              "height": 20,
              "resizeMode": "contain",
              "tintColor": undefined,
              "width": 20,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "flex": 1,
            "marginHorizontal": 4,
            "marginVertical": 12,
            "paddingLeft": 8,
          }
        }
      />
    </View>
  </View>
</MessageWrapper>
`;
